; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_push_stack_element.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_push_stack_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_formatting_stack = type { %struct.ref_formatting_stack*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ref_formatting_stack**)* @push_stack_element to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_stack_element(%struct.ref_formatting_stack** %0) #0 {
  %2 = alloca %struct.ref_formatting_stack**, align 8
  %3 = alloca %struct.ref_formatting_stack*, align 8
  store %struct.ref_formatting_stack** %0, %struct.ref_formatting_stack*** %2, align 8
  %4 = call %struct.ref_formatting_stack* @xcalloc(i32 1, i32 16)
  store %struct.ref_formatting_stack* %4, %struct.ref_formatting_stack** %3, align 8
  %5 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %6 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %5, i32 0, i32 1
  %7 = call i32 @strbuf_init(i32* %6, i32 0)
  %8 = load %struct.ref_formatting_stack**, %struct.ref_formatting_stack*** %2, align 8
  %9 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %8, align 8
  %10 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %11 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %10, i32 0, i32 0
  store %struct.ref_formatting_stack* %9, %struct.ref_formatting_stack** %11, align 8
  %12 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %13 = load %struct.ref_formatting_stack**, %struct.ref_formatting_stack*** %2, align 8
  store %struct.ref_formatting_stack* %12, %struct.ref_formatting_stack** %13, align 8
  ret void
}

declare dso_local %struct.ref_formatting_stack* @xcalloc(i32, i32) #1

declare dso_local i32 @strbuf_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
